# agflow.docker

./: .env.example  .gitignore  CLAUDE.md  COMMERCIAL-LICENSE.md  Caddyfile  Install-dev.md  LESSONS.md  LICENSE  NOTICE  README.md  TODO.md  _diag_raw.txt  apps.json  build.sh  deploy.sh  dev-deploy.sh  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  launch.sh
backend/: .dockerignore  Dockerfile  pyproject.toml  test_output.txt
backend/migrations/: 001_init.sql  002_project_runtime_instances.sql  002_secrets.sql  003_roles.sql  004_role_documents.sql  005_drop_role_llm_fields.sql  006_drop_prompt_agent_md.sql  007_dockerfiles.sql  008_dockerfile_files.sql  009_dockerfile_builds.sql  010_discovery_services.sql  011_mcp_servers.sql  012_skills.sql  013_agents.sql  014_agent_mcp_servers.sql  015_agent_skills.sql  016_role_sections.sql  017_agent_profiles.sql  018_service_types.sql  019_ensure_native_sections.sql  020_seed_new_standard_files.sql  021_dockerfile_json_new_schema.sql  022_users.sql  023_user_identities.sql  024_seed_admin_user.sql  025_api_keys.sql  026_user_vault.sql  027_user_secrets.sql  028_agent_assistant.sql  029_files_to_disk.sql  030_launched_tasks.sql  031_drop_dockerfile_files_table.sql  032_drop_runtime_config.sql  033_roles_content_to_disk.sql  034_drop_role_documents_table.sql  035_agents_to_disk.sql  036_drop_agents_table.sql  037_agent_messages.sql  038_rate_limit_counters.sql  039_sessions_and_agents.sql  (+85 more)
backend/tests/: _db_reset.py  _vault_mock.py  conftest.py  test_agent_profiles_service.py  test_agents_endpoint.py  (+60 more)
(+963 files in other folders)
