[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/agflow"]

[project]
name = "agflow-backend"
version = "0.1.0"
description = "agflow.docker backend — FastAPI + asyncpg platform for instantiating AI CLI agents"
license = { text = "LicenseRef-PolyForm-Noncommercial-1.0.0" }
authors = [
    { name = "gaelgael5", email = "llm.beard.family@gmail.com" },
]
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "asyncpg>=0.30",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "email-validator>=2.2",
    "structlog>=24.4",
    "httpx>=0.28",
    "python-multipart>=0.0.12",
    "pyjwt[crypto]>=2.9",
    "pyyaml>=6.0",
    "openai>=1.0",
    "bcrypt>=4.2",
    "aiodocker>=0.24",
    "anthropic>=0.40",
    "jinja2>=3.1",
]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5.0",
    "ruff>=0.7",
    "mypy>=1.13",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM", "RUF"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"

[tool.coverage.run]
source = ["src/agflow"]
omit = ["tests/*"]
